--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,89 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
     android:layout_height="match_parent"
     tools:context=".SignInActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:layout_marginTop="200dp">
+            <EditText
+                android:id="@+id/editTextLogin"
+                android:layout_width="321dp"
+                android:layout_height="53dp"
 
-    <EditText
-        android:id="@+id/editTextLogin"
-        android:layout_width="321dp"
-        android:layout_height="53dp"
-
-        android:layout_centerHorizontal="true"
-
-        android:layout_marginTop="142dp"
-        android:background="@drawable/body_for_edit_text"
-        android:hint="@string/string_login"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:textSize="30dp" />
-
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="321dp"
-        android:layout_height="53dp"
-
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="270dp"
+                android:layout_centerHorizontal="true"
 
 
-        android:layout_marginEnd="47dp"
-        android:layout_marginRight="47dp"
-        android:background="@drawable/body_for_edit_text"
-        android:hint="@string/string_passwd"
-        android:inputType="textPassword"
-        android:paddingLeft="20dp"
-        android:textSize="30dp" />
+                android:background="@drawable/body_for_edit_text"
+                android:hint="@string/string_login"
+                android:inputType="textPersonName"
+                android:paddingLeft="20dp"
+                android:textSize="30dp" />
+        </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="540dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="321dp"
+                android:layout_height="53dp"
 
-        android:hint="@string/first_time_in_pj"
-        android:linksClickable="true"
-        android:textColorHint="@color/forTheFirstTimeInPennyJoy" />
-
+                android:layout_centerHorizontal="true"
 
 
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonEnter"
-        android:layout_width="274dp"
-        android:layout_height="29dp"
-
-
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="440dp"
-        android:textAllCaps="false"
-        android:gravity="center"
-        android:fontFamily="sans-serif-condensed"
-        android:background="@drawable/body_for_btn_enter_sign_in"
-        android:onClick="onClick"
-        android:textSize="20dp"
-        android:text="@string/enter_btn" />
+                android:background="@drawable/body_for_edit_text"
+                android:hint="@string/string_passwd"
+                android:inputType="textPassword"
+                android:paddingLeft="20dp"
+                android:textSize="30dp" />
+        </RelativeLayout>
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonToSignUp"
-        android:layout_width="274dp"
-        android:layout_height="29dp"
-        android:onClick="onClick"
-        android:text="@string/sign_up_btn"
-        android:textSize="17dp"
-        android:textColor="@color/white"
-        android:textAllCaps="false"
-        android:gravity="center"
-        android:background="@drawable/body_for_btn_registration_sign_in"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonEnter"
+                android:layout_width="274dp"
+                android:layout_height="29dp"
+                android:foreground="?android:attr/selectableItemBackground"
+
+                android:layout_centerHorizontal="true"
+                android:textAllCaps="false"
+                android:gravity="center"
+                android:fontFamily="sans-serif-condensed"
+                android:background="@drawable/body_for_btn_enter_sign_in"
+                android:onClick="onClick"
+                android:textSize="20dp"
+                android:text="@string/enter_btn" />
+        </RelativeLayout>
 
 
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="600dp"
-        />
+
+
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            >
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:paddingBottom="80dp"
+                android:hint="@string/first_time_in_pj"
+                android:linksClickable="true"
+                android:textColorHint="@color/forTheFirstTimeInPennyJoy" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonToSignUp"
+                android:layout_width="274dp"
+                android:layout_height="29dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/body_for_btn_registration_sign_in"
+                android:gravity="center"
+                android:onClick="onClick"
+                android:text="@string/sign_up_btn"
+                android:textAllCaps="false"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:textColor="@color/white"
+                android:textSize="17dp"
+
+                />
+        </RelativeLayout>
+
+
+    </LinearLayout>
+
+
 </RelativeLayout>
