--- a/app/src/main/res/layout/activity_sign_up_no_acc1.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc1.xml
@@ -17,6 +17,7 @@
         android:textAllCaps="false"
         android:text="@string/string_next_for_btn"
         android:textSize="20dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:background="@drawable/body_for_btn_radius_13_dp_sign_in"/>
 
     <EditText
