--- a/app/src/main/res/layout/activity_sign_up_no_acc3.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc3.xml
@@ -7,61 +7,87 @@
     android:background="@color/black"
     tools:context=".SignUpActivityNoAcc3">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnSave"
-        android:layout_width="294dp"
-        android:layout_height="55dp"
-        android:layout_centerHorizontal="true"
-        android:onClick="saveUserClicked"
-        android:layout_marginTop="428dp"
-        android:textSize="20dp"
-        android:textAllCaps="false"
-        android:background="@drawable/body_for_btn_radius_13_dp_sign_in"
-        android:text="Зарегистрироваться"
-        android:gravity="center"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="30dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:textSize="30dp"
+                android:text="Выберите валюту"
+                android:textColor="@color/white"
+                android:layout_marginTop="130dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="30dp">
+            <Spinner
+                android:id="@+id/currencyDropDown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/body_for_spinner_currency"
+                android:textSize="400dp"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="100dp"
+                android:src="@drawable/selector_for_currency"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="30dp">
+            <EditText
+                android:id="@+id/txtSalary"
+                android:layout_width="350.77dp"
+                android:layout_height="58dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/body_for_edit_text"
+
+                android:textSize="30dp"
+                android:gravity="center"
+                android:inputType="numberDecimal"
+                android:hint="Заработная плата" />
+        </RelativeLayout>
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="30dp">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnSave"
+                android:layout_width="294dp"
+                android:layout_height="55dp"
+                android:layout_centerHorizontal="true"
+                android:onClick="saveUserClicked"
+                android:layout_alignParentBottom="true"
+                android:textSize="20dp"
+                android:textAllCaps="false"
+                android:background="@drawable/body_for_btn_radius_13_dp_sign_in"
+                android:text="Зарегистрироваться"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:gravity="center"
+                />
 
-    <EditText
-        android:id="@+id/txtSalary"
-        android:layout_width="350.77dp"
-        android:layout_height="58dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/body_for_edit_text"
-        android:layout_marginTop="276dp"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:inputType="numberDecimal"
-        android:hint="Заработная плата" />
+        </RelativeLayout>
 
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp"
-        android:textSize="30dp"
-        android:text="Выберите валюту"
-        android:textColor="@color/white"/>
-
-    <Spinner
-        android:id="@+id/currencyDropDown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="122dp"
-        android:background="@drawable/body_for_spinner_currency"
-        android:textSize="400dp"
-        />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="140dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="130dp"
-        android:src="@drawable/selector_for_currency"/>
 
 </RelativeLayout>
