--- a/app/src/main/res/layout/activity_add_users_category.xml
+++ b/app/src/main/res/layout/activity_add_users_category.xml
@@ -36,9 +36,12 @@
 
             <EditText
                 android:id="@+id/txtCategoryName"
-                android:layout_width="245dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="10dp"
                 android:layout_centerInParent="true"
+                android:paddingLeft="120dp"
+                android:paddingRight="120dp"
 
                 android:textSize="20dp"
                 android:background="@drawable/body_for_edit_text"
