--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:clickable="true"
         app:fabSize="normal"
 
-        android:visibility="visible"
+        android:visibility="invisible"
 
         android:onClick="settingsOfUserClicked"
         app:maxImageSize="40dp"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="380dp"
+        android:layout_marginTop="450dp"
         android:layout_marginRight="18dp"
         android:src="@drawable/currencies_svgrepo_com"
         android:backgroundTint="@color/white"
@@ -62,7 +62,7 @@
         android:clickable="true"
         app:fabSize="normal"
 
-        android:visibility="visible"
+        android:visibility="invisible"
 
         app:maxImageSize="40dp"
         android:onClick="settingsOfCurrenciesClicked"
