--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,15 +48,15 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabSettingsOfCurrency"
+        android:id="@+id/fabLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="450dp"
         android:layout_marginRight="18dp"
-        android:src="@drawable/currencies_svgrepo_com"
-        android:backgroundTint="@color/white"
+        android:src="@drawable/log_out"
+        android:backgroundTint="@color/crimson"
         android:foreground="?android:attr/selectableItemBackground"
         android:focusable="true"
         android:clickable="true"
@@ -65,7 +65,7 @@
         android:visibility="invisible"
 
         app:maxImageSize="40dp"
-        android:onClick="settingsOfCurrenciesClicked"
+        android:onClick="LogOutBtnClicked"
         />
 
 
