--- a/app/src/main/res/layout/fragment_helper.xml
+++ b/app/src/main/res/layout/fragment_helper.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/black"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,6 +13,14 @@
         android:layout_marginTop="301dp"
         android:text="YOU CAN GET ADVICE HERE!!!"
         android:textColor="@color/white"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        />
+
+    <Button
+        android:id="@+id/testSlide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test slide"
+        />
 
 </RelativeLayout>
