--- a/app/src/main/res/layout/fragment_helper.xml
+++ b/app/src/main/res/layout/fragment_helper.xml
@@ -5,16 +5,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:text="Чтобы получить совет ответьте на пару вопросов"
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                android:gravity="center"
+                />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+            <ImageView
+                android:id="@+id/arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/arrow"
+                android:layout_centerInParent="true"
+                android:layout_alignParentBottom="true"
+                android:paddingBottom="200dp"/>
+        </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="301dp"
-        android:text="YOU CAN GET ADVICE HERE!!!"
-        android:textColor="@color/white"
-        android:textSize="30dp"
-        />
+    </LinearLayout>
+
 
 
 
