--- a/app/src/main/res/layout/activity_result_of_test.xml
+++ b/app/src/main/res/layout/activity_result_of_test.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResultOfTestActivity"
+    tools:context=".ResultOfQuizActivity"
     android:background="@color/black">
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,12 +13,50 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:paddingTop="95dp"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
+                android:id="@+id/image_with_resultIcon"
                 android:layout_width="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_height="wrap_content"
                 />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="90dp">
+
+            <TextView
+                android:id="@+id/tv_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:textSize="30dp"
+                android:paddingLeft="90dp"
+                android:paddingRight="90dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:textAlignment="gravity"
+                android:singleLine="false"
+                android:text=""
+                android:background="@drawable/template_of_result_of_quiz" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="80dp">
+
+            <ImageButton
+                android:id="@+id/btn_return_to_fragments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/resource_return" />
         </RelativeLayout>
 
     </LinearLayout>
