--- a/app/src/main/res/layout/activity_set_passwd.xml
+++ b/app/src/main/res/layout/activity_set_passwd.xml
@@ -7,110 +7,165 @@
     tools:context=".SetPasswdActivity"
     android:background="@color/black">
 
-    <TextView
-        android:id="@+id/enter_old_password"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+            <TextView
+                android:id="@+id/enter_old_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+
+                android:text="@string/enter_old_passwd"
+                android:textColor="#848484"
+                android:textSize="30dp" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+            <EditText
+                android:id="@+id/old_passwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:inputType="textPassword"
+                android:gravity="center"
+                android:ellipsize="start"
+                android:singleLine="true"
+                android:textSize="30dp"
+                android:text=""
+                android:background="@drawable/template_for_tv_in_set_user_name" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/newPasswd_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Новый пароль"
+                android:textColor="#848484"
+                android:textSize="30dp" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+
+            <EditText
+                android:id="@+id/new_password1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:gravity="center"
+                android:ellipsize="start"
+                android:textSize="25dp"
+                android:maxLength="16"
+                android:text=""
+                android:background="@drawable/template_for_tv_in_set_user_name" />
+        </RelativeLayout>
+
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Повторите новый пароль"
+                android:textColor="#848484"
+                android:textSize="30dp" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+            <EditText
+                android:id="@+id/newPasswd2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@drawable/template_for_tv_in_set_user_name"
+                android:ellipsize="start"
+                android:gravity="center"
+                android:inputType="textPassword"
+                android:maxLength="16"
+                android:singleLine="true"
+                android:text=""
+                android:textSize="25dp" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:padding="20dp">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/save_new_passwd"
+                android:layout_width="294dp"
+                android:layout_height="55dp"
+                android:layout_centerInParent="true"
+                android:textAllCaps="false"
+                android:textSize="23dp"
+                android:text="Сохранить"
+                android:textColor="@color/black"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:background="@drawable/body_for_btn_radius_13_dp_sign_in" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/containerForBackButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+
+            <ImageButton
+                android:id="@+id/button_return_from_edit_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/long_left"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:background="@null"/>
+        </RelativeLayout>
+
+
+    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBarInSetPasswd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="95dp"
-        android:text="@string/enter_old_passwd"
-        android:textColor="#848484"
-        android:textSize="30dp" />
-
-    <EditText
-        android:id="@+id/old_passwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="34dp"
-        android:layout_marginLeft="34dp"
-        android:layout_marginTop="144dp"
-        android:inputType="textPassword"
-        android:gravity="center"
-        android:ellipsize="start"
-        android:textAlignment="center"
-        android:singleLine="true"
-        android:textSize="30dp"
-        android:text=""
-        android:background="@drawable/template_for_tv_in_set_user_name" />
-
-    <TextView
-        android:id="@+id/newPasswd_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="96dp"
-        android:layout_marginLeft="96dp"
-        android:layout_marginTop="242dp"
-        android:text="Новый пароль"
-        android:textColor="#848484"
-        android:textSize="30dp" />
-
-    <EditText
-        android:id="@+id/new_password1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="290dp"
-        android:inputType="text"
-        android:singleLine="true"
-        android:gravity="center"
-        android:ellipsize="start"
-        android:textSize="25dp"
-        android:maxLength="16"
-        android:text=""
-        android:textAlignment="center"
-        android:background="@drawable/template_for_tv_in_set_user_name" />
+        android:indeterminateTint="@color/purple_500"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="383dp"
-        android:text="Повторите новый пароль"
-        android:textColor="#848484"
-        android:textSize="30dp" />
-
-    <EditText
-        android:id="@+id/newPasswd2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="426dp"
-        android:background="@drawable/template_for_tv_in_set_user_name"
-        android:ellipsize="start"
-        android:gravity="center"
-        android:inputType="text"
-        android:maxLength="16"
-        android:singleLine="true"
-        android:text=""
-        android:textSize="25dp"
-        android:textAlignment="center" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/save_new_passwd"
-        android:layout_width="294dp"
-        android:layout_height="55dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="524dp"
-        android:textAllCaps="false"
-        android:textSize="23dp"
-        android:text="Сохранить"
-        android:textColor="@color/black"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:background="@drawable/body_for_btn_radius_13_dp_sign_in" />
-
-    <ImageButton
-        android:id="@+id/button_return_from_edit_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/long_left"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:background="@null"/>
 </RelativeLayout>
