--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,11 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".SignInActivity">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,7 +33,10 @@
                 android:inputType="textPersonName"
                 android:paddingLeft="20dp"
                 android:textSize="30dp" />
+
+
         </RelativeLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -113,6 +119,14 @@
 
 
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBarInSignIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/purple_500"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        />
 
 
 </RelativeLayout>
